--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,8 +24,8 @@
   /* top: 50%;
   left: 50%; */
   /* transform: translate(-50%,-50%); */
-  width: 360px;
-  height: 500px;
+  width: 100%;
+  height: 530px;
   background: #000;
   z-index: 1;
   margin: 20px;
