--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -1,4 +1,4 @@
-<div class="container row mt-5">
+<div class="container row mt-5 align-items-center">
   <div class="col-sm d-flex align-items-center">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -27,26 +27,31 @@
     </div>
   </div>
 
-  <div class="col-sm">
-    <h1 class="card-title"> <%= item.shop.name %> |  </h1>
+  <div class="col-sm d-flex row">
+    <h1 class="card-title"> <%= item.shop.name %>  </h1>
     <h2 class="card-title"> <%= item.name %> </h2>
-    <p ul class="card-text"> <%= item.description %>
-    <%# <li><%= item.size %></li>
-    <%# <li><%= item.matter %></li>
-    <%# <li><%= item.maintenance %> </li>
-    </ul></p>
+    <p class="card-text">
+      <%= item.description %>
+    </p>
+    <div class="d-flex flex-column">
     <p> Quantité : <%= item.available_quantity %> </p>
     <p class="card-text"> Prix : <%= item.price %> € </p>
-    <%# <button class="primary"> Ajouter au panier </button> %>
-    <% if user_signed_in? %>
+    
+       <% if user_signed_in? %>
       <% if is_item_quantity_sufficient_to_add_another_to_cart(item.id) == true %>
-         <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-primary", params: {item_id: item.id, operation: "add"} %>
+         <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-primary btn-lg btn-block", params: {item_id: item.id, operation: "add"} %>
       <% else %>
           <button class="btn btn-warning btn-lg" disabled>Epuisé</button>
       <% end %>
-    <% else %>
-      <%= link_to "Se connecter pour ajouter au panier", new_user_registration_path, :class => "btn btn-info" %>
-    <% end %>
+      <% else %>
+      <%= link_to "Se connecter pour ajouter au panier", new_user_registration_path, :class => "btn btn-primary btn-lg btn-block" %>
+      <% end %>
+      <div class="d-flex flex-row align-items-stretch">
+        <%= link_to "Revenir à la catégorie", category_path(item.category.id), :class => "btn btn-info"%>
+        <%= link_to "Voir la page du shop", shop_path(item.shop.id), :class => "btn btn-info"%>
+      </div>
+    </div>
+   
   </div>
 
 </div>
